docs/_static/config_examples/f5-k8s-controller-quickstart.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-k8s-controller
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: f5-k8s-controller
      labels:
        app: f5-k8s-controller
    spec:
      containers:
        - name: f5-k8s-controller
          image: "f5networks/f5-ci-beta/f5-k8s-controller:latest"
          command: ["/app/bin/f5-k8s-controller"]
          args: ["--running-in-cluster=true",
            "--bigip-url=$(BIGIP_URL)",
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--namespace=kube-system",
            "--bigip-partition=<bigip-partition>"
          ]
