docs/_static/config_examples/f5-kube-proxy-manifest-master.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-proxy
  namespace: kube-system
spec:
  hostNetwork: true
  containers:
  - name: kube-proxy
    image: docker-registry.pdbld.f5net.com/velcro/f5-kube-proxy:f5-v1.3.7
    command:
    - /proxy
    - --master=http://127.0.0.1:8080
    - --proxy-mode=iptables
    securityContext:
      privileged: true
    volumeMounts:
    - mountPath: /etc/ssl/certs
      name: ssl-certs-host
      readOnly: true
    - mountPath: /var/run/kubernetes/proxy-plugin
      name: plugin-config
  volumes:
  - hostPath:
      path: /usr/share/ca-certificates
    name: ssl-certs-host
  - name: plugin-config
    hostPath:
      path: /var/run/kubernetes/proxy-plugin
