docs/_static/config_examples/f5-asp-k8s-health-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    # provide the desired ASP config parameters as a JSON blob
    asp.f5.com/config: |
      {
        "ip-protocol": "http",
        "load-balancing-mode": "round-robin",
        "flags" : {
          "x-forwarded-for": true,
          "x-served-by": true
        },
        "health-monitor": {
          "health-checks": {
            "srv1-check": {
              "default-state": "unknown",
              "active": {
                "timeout": 10,
                "interval": 10,
                "up-count": 2,
                "down-count": 3,
                "http": {
                  "path": "/healthz"
                }
              }
            }
          }
        }
      }
  labels:
    # the name of the Service
    name: myService
  # the name of the Service
  name: myService
  # the namespace of the Service you want to proxy; the ASP pod will be
  # created in this namespace
  namespace: default
spec:
  selector:
    # once again, the name of the Service
    app: myService
  type: NodePort
  ports:
    - name: "http"
      protocol: TCP
      port: 80
