docs/_static/config_examples/f5-ephemeral-store-k8s-example.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: ephemeral-store-info-service
  name: ephemeral-store-info
spec:
  ports:
    - name: proto
      protocol: TCP
      port: 8087
      targetPort: 8087
  selector:
    name: ephemeral-store
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: ephemeral-store-service
  name: ephemeral-store
spec:
  ports:
    - name: proto
      protocol: TCP
      port: 8087
      targetPort: 8087
  selector:
    name: ephemeral-store
