docs/_static/config_examples/f5-openshift-edge-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-edge-secured
spec:
  host: mysite.example.com
  to:
    kind: Service
    name: myService1
  tls:
    termination: edge
    key: |-
      -----BEGIN PRIVATE KEY-----
      [...]
      -----END PRIVATE KEY-----
    certificate: |-              
      -----BEGIN CERTIFICATE-----
      [...]
      -----END CERTIFICATE-----
    caCertificate: |-            
      -----BEGIN CERTIFICATE-----
      [...]
      -----END CERTIFICATE-----
