docs/_static/config_examples/f5-openshift-passthrough-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-passthrough-secured
spec:
  host: mysite.example.com
  to:
    kind: Service
    name: myService1
  tls:
    termination: passthrough
