docs/_static/config_examples/f5-openshift-reencrypt-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-reencrypt-secured
spec:
  host: mysite.example.com
  to:
    kind: Service
    name: myService1
  tls:
    termination: reencrypt
    key: [as in edge termination]
    certificate: [as in edge termination]
    caCertificate: [as in edge termination]
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      [...]
      -----END CERTIFICATE-----
