docs/_static/config_examples/f5-openshift-route-health-monitor.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-unsecured
  annotations:
    virtual-server.f5.com/health: |
      [
        {
          "path":     "mysite.example.com/app1",
          "send":     "HTTP GET /health/app1",
          "interval": 5,
          "timeout":  10
        }
      ]
spec:
  host: mysite.example.com
  path: "/app1"
  to:
    kind: Service
    name: myService1
