docs/_static/config_examples/f5-openshift-unsecured-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-unsecured
spec:
  host: mysite.example.com
  path: "/mysite/app1"
  to:
    kind: Service
    name: myService1
